Update deps and add Footer

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -172,3 +172,19 @@ pre[class*="language"] {
   margin-bottom: 3rem;
   padding: 0px;
 }
+
+.footer-container--div {
+  margin-top: 0;
+}
+
+.footer-container--div div {
+  margin-top: 0;
+}
+
+.footer-gdpr--section {
+  text-align: center;
+  padding: 1rem 0 0 0;
+  background-color: #323232;
+  color: #aeaeae;
+  font-size: 0.7rem;
+}
